--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!-- Tracks used in this music/audio player application are free to use. I downloaded them from Soundcloud and NCS websites. I am not the owner of these tracks. -->
-
+<!-- Nguồn website được ăn cắp bởi HoangNguyen, sử dụng với mục đích cá nhân -->
+<!-- Tất cả các bài hát được sử dụng trên web được tổng hợp từ nhiều nguồn như NCT, Zingmp3, Youtube -->
+<!-- con vịt kêu Meo ở bên dưới được ăn cắp từ Amazon :v -->
+    <!--       _
+       .__(.)< (MEOW)
+        \___)   
+ ~~~~~~~~~~~~~~~~~~-->
     <h1 id="message">Music player</h1>
-    <div id="app-cover">
+	
+	<div id="app-cover">
         <div id="bg-artwork"></div>
         <div id="bg-layer"></div>
         <div id="player">
@@ -67,6 +72,10 @@
     </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
+ <div id="message1">
+Bị lỗi load nhạc lâu thì chọn lại bài trong list nhạc nhé 😗	
+	</div> 
 
 </body>
+
 </html>
