--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
  <div id="message1">
-Bị lỗi load nhạc lâu thì chọn lại bài trong list nhạc nhé <a href="https://drive.google.com/folderview?id=1-CYE_2aVbn0Q7rR4gzz1TJ3Xd9RXivgt">😗</a>
+Bị lỗi load nhạc lâu thì chọn lại bài trong list nhạc nhé <a href="https://drive.google.com/folderview?id=1-CYE_2aVbn0Q7rR4gzz1TJ3Xd9RXivgt">😗.</a>
 	</div> 
 
 </body>
