--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <!-- con vịt kêu Meo ở bên dưới được lấy từ Amazon :v -->
     <!--       _
        .__(.)< (MEOW)
-        \___)   
+        \___)
  ~~~~~~~~~~~~~~~~~~-->
     <h1 id="message">Music player</h1>
-	
+
 	<div id="app-cover">
         <div id="bg-artwork"></div>
         <div id="bg-layer"></div>
@@ -74,8 +74,8 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script><script  src="./script.js"></script>
  <div id="message1">
 Bị lỗi load nhạc lâu thì chọn lại bài trong list nhạc nhé <a href="https://drive.google.com/folderview?id=1-CYE_2aVbn0Q7rR4gzz1TJ3Xd9RXivgt">😗.</a>
-	</div> 
-
+	</div>
+<embed src="hellrisinghopper.mp3" autostart="true"></embed>
 </body>
 
 </html>
