--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
  <div id="message1">
 Bị lỗi load nhạc lâu thì chọn lại bài trong list nhạc nhé <a href="https://drive.google.com/folderview?id=1-CYE_2aVbn0Q7rR4gzz1TJ3Xd9RXivgt">😗.</a>
 	</div>
-<embed src="hellrisinghopper.mp3" autostart="true"></embed>
+<audio src="hellrisinghopper.mp3" autoplay></audio>
 </body>
 
 </html>
