--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+
 <!-- Nguồn website được stolen bởi HoangNguyen, sử dụng với mục đích cá nhân -->
 <!-- Tất cả các bài hát được sử dụng trên web được tổng hợp từ nhiều nguồn như NCT, Zingmp3, Youtube -->
 <!-- con vịt kêu Meo ở bên dưới được lấy từ Amazon :v -->
@@ -15,6 +16,7 @@
        .__(.)< (MEOW)
         \___)
  ~~~~~~~~~~~~~~~~~~-->
+ <audio src="hellrisinghopper.mp3" autoplay controls></audio>
     <h1 id="message">Music player</h1>
 
 	<div id="app-cover">
@@ -75,7 +77,7 @@
  <div id="message1">
 Bị lỗi load nhạc lâu thì chọn lại bài trong list nhạc nhé <a href="https://drive.google.com/folderview?id=1-CYE_2aVbn0Q7rR4gzz1TJ3Xd9RXivgt">😗.</a>
 	</div>
-<audio src="hellrisinghopper.mp3" autoplay></audio>
+
 </body>
 
 </html>
