--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        .__(.)< (MEOW)
         \___)
  ~~~~~~~~~~~~~~~~~~-->
- <audio src="hellrisinghopper.mp3" autoplay controls></audio>
+ <audio src="hellrisinghopper.mp3" autoplay></audio>
     <h1 id="message">Music player</h1>
 
 	<div id="app-cover">
