--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        .__(.)< (MEOW)
         \___)
  ~~~~~~~~~~~~~~~~~~-->
- div style="height: 100vh; align-items: center; justify-content: center; display: flex;">
+ <div style="height: 100vh; align-items: center; justify-content: center; display: flex;">
 
         <div class="loading">
 
